log
Thu 28 Mar 2024 02:13:47 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8f0942d
Thu 28 Mar 2024 02:16:43 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:40:6: error: expected identifier or ‘(’ before ‘return’
   40 |      return NULL;
      |      ^~~~~~
list.c:41:1: error: expected identifier or ‘(’ before ‘}’ token
   41 | }
      | ^
Compilation failed
d9d6465
